# runartg4tk

./: .gitignore  CMakeLists.txt  README.md
fcl/: CMakeLists.txt  HARP_dossier.fcl  ITEP_dossier.fcl  multiverse170208_Bertini.fcl  multiverse181212_Bertini.fcl  paramstep170313_Bertini.fcl
scripts/: CMakeLists.txt  bootstrap_ups.sh  check_for_missing.sh  cleanup_hists.sh  collect_and_split.sh  extract_params.sh  extract_universes.C  extract_universes_local.C  genana_g4vmp_proclevel_condor.sh  generate_universes.C  list_all.C  make_mrb_tarball.sh  simple_build.sh
scripts/old/: g4vmp_proclevel_condor.sh  genfcl.sh
ups/: CMakeLists.txt  product_deps
